<resources>
    <string name="app_name">covid19_info</string>
    <string name="main_current_date">Current date</string>

    <string name="add_clinic">Health center\'s name</string>
    <string name="add_btn_save">Save</string>
    <string name="add_address">Address</string>
    <string name="add_is_only_covid_19_dedicated">Dedicated for COVID-19 only?</string>
    <string name="add_city_county">City, County</string>
    <string name="error_name">Invalid clinic name</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_location">Invalid location. Use the format provided in the hint.</string>
    <string name="new_HC_added">New Heath Center added</string>
    <string name="lv_hc_name">Health Center Name</string>
    <string name="lv_hv_patients_tested">Patients tested</string>
    <string name="lv_hv_patients_count">No.</string>
    <string name="no_medical_centers">No medical centers</string>
    <string name="patient_firstname_lastname">firstName lastName</string>
    <string name="patient_age">(Age y/o)</string>
    <string name="patient_test_type">Test: Type</string>
    <string name="patient_date">(Date)</string>
    <string name="add_hint">Add a new Health Center</string>
    <string name="info_general">General information</string>
    <string name="info_tv_covid_exclusive">: the health center is Covid-19 exclusive</string>
    <string name="tv_negative">Oh! That was close! \nRED = you are Covid-19 free!\nContinue to be vigilant and take care!</string>
    <string name="info_positive">Unfortunately, GREEN = you have it...\nListen to the docs and get some rest.\nWe wish you all the best and get better fast!</string>
    <string name="info_rt_pcr">RT-PCR</string>
    <string name="info_99">99%</string>
    <string name="info_antigen">Antigen</string>
    <string name="info_50">50%</string>
    <string name="info_antibody">Antibody</string>
    <string name="info_30">30%</string>
    <string name="thank_you">To all the healthcare workers on the front lines of the coronavirus pandemic...</string>
    <string name="info_thank_you">Thank you!</string>

</resources>